# knkode

./: .gitignore  HANDOFF.md  LICENSE  README.md  biome.json  index.html  package.json  tsconfig.json  vite.config.ts
.github/: release.yml
.github/scripts/: generate-latest-json.mjs  generate-release-notes.mjs
.github/workflows/: build-release.yml  release.yml
docs/plans/: 2026-03-24-workspace-subgroups-plan.md
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  menu.rs  pty.rs  session_scanner.rs  terminal.rs  tracker.rs  win_pty.rs  window.rs
src-tauri/src/terminal/: commands.rs  event_proxy.rs  instance.rs  manager.rs  mod.rs  types.rs
src-tauri/tests/: terminal_tests.rs
src/components/: AboutTabPanel.tsx  AgentIcons.tsx  CanvasTerminal.tsx  CwdInput.tsx  ErrorBoundary.tsx  FontPicker.tsx  HotkeyPanel.tsx  LayoutPicker.tsx  MoveToWorkspaceSubmenu.tsx  Pane.tsx  PaneArea.tsx  PaneContextMenu.tsx  PaneEffects.tsx  SegmentedButton.tsx  SessionHistoryModal.tsx  SettingsPanel.tsx  SettingsSection.tsx  Sidebar.tsx  SidebarPaneEntry.tsx  SidebarWorkspaceGitInfo.tsx  SidebarWorkspaceHeader.tsx  SnippetDropdown.tsx  SnippetsSection.tsx  SplitPaneLayout.tsx  Tab.tsx  TabBar.tsx  TabContextMenu.tsx  Terminal.tsx  TerminalContextMenu.tsx  TerminalTabPanel.tsx  UpdateBanner.tsx  UpdateStatusContent.tsx  WorkspaceTab.tsx  WorkspaceTabPanel.tsx
src/data/: theme-presets.ts
src/hooks/: useClickOutside.ts  useContextMenu.ts  useDebouncedCallback.ts  useDragReorder.ts  useFileDrop.ts  useInlineEdit.ts  useKeyboardShortcuts.ts  usePaneDragDrop.ts  useUpdateChecker.ts  useWindowDrag.ts  useWorkspaceGitInfo.ts
src/lib/: key-to-ansi.ts  layout-presets.ts  mouse-to-sgr.ts  pane-drag-utils.ts  render-dispatcher.ts  shell-quote.ts  tauri-api.ts  ui-constants.ts
src/shared/: types.ts
src/store/: index.ts  layout-tree.ts  session-history-actions.ts  snippet-actions.ts  terminal.ts  (+2 more)
(+118 files in other folders)
