[package]
name = "knkode"
version = "2.0.0"
edition = "2021"

[lib]
name = "knkode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tattoy-termwiz = "0.24.0-fork.2"
tattoy-wezterm-term = "0.1.0-fork.5"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
portable-pty = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "namedpipeapi", "processthreadsapi", "synchapi", "winbase", "wincon", "winnt", "libloaderapi", "fileapi", "minwindef", "winerror", "tlhelp32"] }
